<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!--
        ** Start of ACCOUNT section
        -->
        <TextView
            style="@style/HeadingStyle"
            android:text="@string/account_header"/>
        <LinearLayout
            style="@style/Row">
            <EditText
                style="@style/textfield_style"
                android:inputType="number"
                android:id="@+id/Robi_recharge"
                android:layout_weight="60"/>
            <Space
                style="@style/space_style"
                android:layout_weight="5"/>
            <Button
                style="@style/button_style"
                android:layout_weight="35"
                android:onClick="getService"
                android:tag="Robi_recharge"
                android:text="@string/recharge"/>
        </LinearLayout>

        <LinearLayout
            style="@style/Row">
            <Space
                style="@style/space_style"
                android:layout_weight="30"/>
            <Button
                style="@style/button_style"
                android:layout_weight="40"
                android:onClick="getService"
                android:tag="Robi_check_balance"
                android:text="@string/account_balance"/>
            <Space
                style="@style/space_style"
                android:layout_weight="30"/>
        </LinearLayout>

        <LinearLayout
            style="@style/Row">
            <Space
                style="@style/space_style"
                android:layout_weight="30"/>
            <Button
                style="@style/button_style"
                android:layout_weight="40"
                android:onClick="getService"
                android:tag="Robi_my_number"
                android:text="@string/mobile_number"/>
            <Space
                style="@style/space_style"
                android:layout_weight="30"/>
        </LinearLayout>

        <!--
        ** Start of EMERGENCY BALANCE section
        -->
        <TextView
            style="@style/HeadingStyle"
            android:text="@string/emergency_balance_header"/>
        <LinearLayout
            style="@style/Row">
            <Space
                style="@style/space_style"
                android:layout_weight="30"/>
            <Button
                style="@style/button_style"
                android:layout_weight="40"
                android:onClick="getService"
                android:tag="Robi_get_emergency_balance"
                android:text="@string/emergency_balance"/>
            <Space
                style="@style/space_style"
                android:layout_weight="30"/>
        </LinearLayout>

        <LinearLayout
            style="@style/Row">
            <Space
                style="@style/space_style"
                android:layout_weight="30"/>
            <Button
                style="@style/button_style"
                android:layout_weight="40"
                android:onClick="getService"
                android:tag="Robi_check_emergency_balance"
                android:text="@string/check_emergency_balance"/>
            <Space
                style="@style/space_style"
                android:layout_weight="30"/>
        </LinearLayout>
        <!--
        ** Start of CALL BACK section
        -->
        <TextView
            style="@style/HeadingStyle"
            android:text="@string/call_back_header"/>
        <LinearLayout
            style="@style/Row">
            <EditText
                style="@style/textfield_style"
                android:inputType="number"
                android:id="@+id/Robi_callback"
                android:layout_weight="60"/>
            <Space
                style="@style/space_style"
                android:layout_weight="5"/>
            <Button
                style="@style/button_style"
                android:layout_weight="35"
                android:onClick="getNumberFromContact"
                android:tag="Robi_callback"
                android:text="@string/contacts"/>
        </LinearLayout>

        <LinearLayout
            style="@style/Row">
            <Space
                style="@style/space_style"
                android:layout_weight="30"/>
            <Button
                style="@style/button_style"
                android:layout_weight="40"
                android:tag="Robi_callback"
                android:onClick="getService"
                android:text="@string/call_back"/>
            <Space
                style="@style/space_style"
                android:layout_weight="30"/>
        </LinearLayout>

        <!--
        ** Start of FNF section
        -->

    </LinearLayout>
</ScrollView>
