<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!--
        ** Start of ACCOUNT section
        -->
        <TextView
            style="@style/HeadingStyle"
            android:text="@string/account_header"/>
        <LinearLayout
            style="@style/Row">
            <Space
                style="@style/space_style"
                android:layout_weight="2.5"/>
            <EditText
                style="@style/textfield_style"
                android:id="@+id/Grameenphone_recharge"
                android:layout_weight="55"/>
            <Space
                style="@style/space_style"
                android:layout_weight="5"/>
            <Button
                style="@style/button_style"
                android:layout_weight="35"
                android:onClick="getService"
                android:tag="Grameenphone_recharge"
                android:text="@string/recharge"/>
            <Space
                style="@style/space_style"
                android:layout_weight="2.5"/>
        </LinearLayout>

        <LinearLayout
            style="@style/Row">
            <Space
                style="@style/space_style"
                android:layout_weight="30"/>
            <Button
                style="@style/button_style"
                android:layout_weight="40"
                android:onClick="getService"
                android:tag="Grameenphone_check_balance"
                android:text="@string/account_balance"/>
            <Space
                style="@style/space_style"
                android:layout_weight="30"/>
        </LinearLayout>

        <LinearLayout
            style="@style/Row">
            <Space
                style="@style/space_style"
                android:layout_weight="30"/>
            <Button
                style="@style/button_style"
                android:layout_weight="40"
                android:onClick="getService"
                android:tag="Grameenphone_my_number"
                android:text="@string/mobile_number"/>
            <Space
                style="@style/space_style"
                android:layout_weight="30"/>
        </LinearLayout>

        <!--
        ** Start of EMERGENCY BALANCE section
        -->
        <TextView
            style="@style/HeadingStyle"
            android:text="@string/emergency_balance_header"/>
        <LinearLayout
            style="@style/Row">
            <Space
                style="@style/space_style"
                android:layout_weight="30"/>
            <Button
                style="@style/button_style"
                android:layout_weight="40"
                android:onClick="getService"
                android:tag="Grameenphone_get_emergency_balance"
                android:text="@string/emergency_balance"/>
            <Space
                style="@style/space_style"
                android:layout_weight="30"/>
        </LinearLayout>

        <LinearLayout
            style="@style/Row">
            <Space
                style="@style/space_style"
                android:layout_weight="30"/>
            <Button
                style="@style/button_style"
                android:layout_weight="40"
                android:onClick="getService"
                android:tag="Grameenphone_check_emergency_balance"
                android:text="@string/check_emergency_balance"/>
            <Space
                style="@style/space_style"
                android:layout_weight="30"/>
        </LinearLayout>
        <!--
        ** Start of CALL BACK section
        -->
        <TextView
            style="@style/HeadingStyle"
            android:text="@string/call_back_header"/>
        <LinearLayout
            style="@style/Row">
            <Space
                style="@style/space_style"
                android:layout_weight="2.5"/>
            <EditText
                style="@style/textfield_style"
                android:id="@+id/Grameenphone_callback"
                android:layout_weight="55"/>
            <Space
                style="@style/space_style"
                android:layout_weight="5"/>
            <Button
                style="@style/button_style"
                android:layout_weight="35"
                android:onClick="getNumberFromContact"
                android:tag="Grameenphone_callback"
                android:text="@string/contacts"/>
            <Space
                style="@style/space_style"
                android:layout_weight="2.5"/>
        </LinearLayout>

        <LinearLayout
            style="@style/Row">
            <Space
                style="@style/space_style"
                android:layout_weight="30"/>
            <Button
                style="@style/button_style"
                android:layout_weight="40"
                android:tag="Grameenphone_callback"
                android:onClick="getService"
                android:text="@string/call_back"/>
            <Space
                style="@style/space_style"
                android:layout_weight="30"/>
        </LinearLayout>

        <!--
        ** Start of FNF section
        -->
        <TextView
            style="@style/HeadingStyle"
            android:text="@string/fnf_header"/>
        <LinearLayout
            style="@style/Row">
            <Space
                style="@style/space_style"
                android:layout_weight="2.5"/>
            <EditText
                style="@style/textfield_style"
                android:hint="old number"
                android:layout_weight="55"/>
            <Space
                style="@style/space_style"
                android:layout_weight="5"/>
            <Button
                style="@style/button_style"
                android:layout_weight="35"
                android:onClick="getNumberFromContact"
                android:tag="Grameenphone_callback"
                android:text="@string/contacts"/>
            <Space
                style="@style/space_style"
                android:layout_weight="2.5"/>
        </LinearLayout>
        <LinearLayout
            style="@style/Row">
            <Space
                style="@style/space_style"
                android:layout_weight="2.5"/>
            <EditText
                style="@style/textfield_style"
                android:hint="new number"
                android:layout_weight="55"/>
            <Space
                style="@style/space_style"
                android:layout_weight="5"/>
            <Button
                style="@style/button_style"
                android:layout_weight="35"
                android:onClick="getNumberFromContact"
                android:tag="Grameenphone_callback"
                android:text="@string/contacts"/>
            <Space
                style="@style/space_style"
                android:layout_weight="2.5"/>
        </LinearLayout>
        <LinearLayout
            style="@style/Row">
            <Space
                style="@style/space_style"
                android:layout_weight="7.5"/>
            <Button
                style="@style/button_style"
                android:layout_weight="25"
                android:tag="Grameenphone_callback"
                android:onClick="getService"
                android:text="Add"/>
            <Space
                style="@style/space_style"
                android:layout_weight="5"/>
            <Button
                style="@style/button_style"
                android:layout_weight="25"
                android:tag="Grameenphone_callback"
                android:onClick="getService"
                android:text="Change"/>
            <Space
                style="@style/space_style"
                android:layout_weight="5"/>
            <Button
                style="@style/button_style"
                android:layout_weight="25"
                android:tag="Grameenphone_callback"
                android:onClick="getService"
                android:text="Delete"/>
            <Space
                style="@style/space_style"
                android:layout_weight="7.5"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
